--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1656,3 +1656,17 @@ input, select, textarea {
 		body.is-preload #footer {
 			opacity: 0;
 		}
+		
+.video-responsive{
+    overflow:hidden;
+    padding-bottom:56.25%;
+    position:relative;
+    height:0;
+}
+.video-responsive iframe{
+    left:0;
+    top:0;
+    height:100%;
+    width:100%;
+    position:absolute;
+}
