--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1662,6 +1662,7 @@ input, select, textarea {
     padding-bottom:56.25%;
     position:relative;
     height:0;
+	margin: 0px;
 }
 .video-responsive iframe{
     left:0;
