google analytics added

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,6 +1,6 @@
 @import url(fontawesome-all.min.css);
-@import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300italic,600italic,300,600");
-
+/*@import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300italic,600italic,300,600");*/
+@import url("https://fonts.googleapis.com/css?family=Roboto:300italic,600italic,300,600");
 /*
 	Dimension by HTML5 UP
 	html5up.net | @ajlkn
@@ -1670,7 +1670,4 @@ input, select, textarea {
     height:100%;
     width:100%;
     position:absolute;
-}
-.video-responsive {
-  background:url(../images/loader.gif) center center no-repeat;
 }
