--- a/assets/css/stars.css
+++ b/assets/css/stars.css
@@ -5,7 +5,7 @@ html {
 body {
   color: white;
   background: radial-gradient(ellipse at bottom, #1B2735 0%, #090A0F 100%);
-  font-family: "Nova Square", cursive;
+  font-family: 'Roboto', sans-serif;
   font-size: calc(0.75em + 1vmin);
   font-weight: 300;
 }
