--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,6 +1,6 @@
 @import url(fontawesome-all.min.css);
 /*@import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300italic,600italic,300,600");*/
-@import url("https://fonts.googleapis.com/css?family=Roboto:300italic,600italic,300,600");
+/*@import url("https://fonts.googleapis.com/css?family=Roboto:300italic,600italic,300,600");*/
 /*
 	Dimension by HTML5 UP
 	html5up.net | @ajlkn
@@ -141,7 +141,7 @@ input, select, textarea {
 
 	body, input, select, textarea {
 		color: #ffffff;
-		font-family: "Source Sans Pro", sans-serif;
+		font-family: 'Roboto', sans-serif;
 		font-weight: 300;
 		font-size: 1rem;
 		line-height: 1.65;
