--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1671,3 +1671,29 @@ input, select, textarea {
     width:100%;
     position:absolute;
 }
+
+#loading {
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-top: -50px;
+  margin-left: -50px;
+  width: 11em;
+  height: 11em;
+  z-index: 9999999;
+  display: block;
+  opacity: 0.7;
+  background-color: #00000000;
+  text-align: center;
+}
+
+#loading-image {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 99999999;
+}
