--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1672,90 +1672,16 @@ input, select, textarea {
     position:absolute;
 }
 
-#loading {
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  margin-top: -50px;
-  margin-left: -50px;
-  width: 11em;
-  height: 11em;
-  z-index: 9999999;
-  display: block;
-  opacity: 0.7;
-  background-color: #00000000;
-  text-align: center;
-}
 
-#loading-image {
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 99999999;
+.dot-spinner-48x48 { 
+	animation: dot-spinner-48x48 1s steps(12) infinite;
+	display: block;
+	width: 48px;
+	height: 48px;
+	position: absolute; /* or absolute */
+	top: 50%;
+	left: 50%;
+	z-index: 9999999;
+	background-image:url(../../images/loading.png); 
 }
-
-.loader,
-.loader:before,
-.loader:after {
-  background: #ffffff;
-  -webkit-animation: load1 1s infinite ease-in-out;
-  animation: load1 1s infinite ease-in-out;
-  width: 1em;
-  height: 4em;
-}
-.loader {
-  color: #ffffff;
-  text-indent: -9999em;
-  margin: 88px auto;
-  position: fixed; /* or absolute */
-  top: 50%;
-  left: 50%;
-  font-size: 11px;
-  -webkit-transform: translateZ(0);
-  -ms-transform: translateZ(0);
-  transform: translateZ(0);
-  -webkit-animation-delay: -0.16s;
-  animation-delay: -0.16s;
-}
-.loader:before,
-.loader:after {
-  position: absolute;
-  top: 0;
-  content: '';
-}
-.loader:before {
-  left: -1.5em;
-  -webkit-animation-delay: -0.32s;
-  animation-delay: -0.32s;
-}
-.loader:after {
-  left: 1.5em;
-}
-@-webkit-keyframes load1 {
-  0%,
-  80%,
-  100% {
-    box-shadow: 0 0;
-    height: 4em;
-  }
-  40% {
-    box-shadow: 0 -2em;
-    height: 5em;
-  }
-}
-@keyframes load1 {
-  0%,
-  80%,
-  100% {
-    box-shadow: 0 0;
-    height: 4em;
-  }
-  40% {
-    box-shadow: 0 -2em;
-    height: 5em;
-  }
-}
+@keyframes dot-spinner-48x48 { from { background-position: 0px 0px; } to { background-position: 0px -576px; } }
